fixed: broken layout in dialogs with input field

--- a/src/stylesheets/vortex/dialogs.scss
+++ b/src/stylesheets/vortex/dialogs.scss
@@ -83,6 +83,7 @@
     > div {
       flex: 1 1 0;
       display: flex;
+      flex-direction: column;
     }
   }
 
